Verify that logs from ruling ITs are the expected ones (#233)